data/all_generated_tests/raw_wast_tests/if_IncorrectBranchTargetResolution_1276.wast
;; 7. **Invalid stack unwinding**: In the `else` part of an `if` statement, insert a `br` instruction that attempts to break to a parent label without properly resolving the stack's operands, leading to incorrect stack unwinding if improperly resolved.    ```    (block $outer      (if (i32.const 0)        (then          (i32.const 32)        )         (else          (i32.const 64)          (f64.const 1.5)          (br $outer)        )      )    )    ```

(assert_invalid
  (module
    (func $invalid-stack-unwinding
      (block $outer
        (if (i32.const 0)
          (then
            (i32.const 32)
          )
          (else
            (i32.const 64)
            (f64.const 1.5)
            (br $outer)
          )
        )
      )
    )
  )
  "type mismatch"
)